[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/backdrop/BdCave.gd" type="Script" id=1]
[ext_resource path="res://sprites/bg/bg_cave.png" type="Texture" id=2]
[ext_resource path="res://sprites/bg/bg_cave_crystals_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/bg/bg_cave_crystals_2.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "strobe"
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("BgCrystals1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BgCrystals2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="BackdropCave" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
z_index = -20
z_as_relative = false
script = ExtResource( 1 )

[node name="BgCave" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 200.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BgCrystals1" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 200.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BgCrystals2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 800.0
margin_bottom = 200.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.690196, 0.690196, 0.690196, 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "strobe"
anims/strobe = SubResource( 1 )
